lots of code for shop cart list

--- a/07week/dom-practice/index.html
+++ b/07week/dom-practice/index.html
@@ -10,11 +10,18 @@
   <body>
   <h1>Shopping Cart</h1>
   
-  <div id="myDIV" class="header">
+  <!-- <div id="myDIV" class="header">
     <input type="text" id="myInput" placeholder="Add item...">
     <span onclick="newElement()" class="addBtn">Add</span>
-  </div>
-  <ul id="shopcartul">
+  </div> -->
+
+  <!-- input buttons -->
+  <input type="text" id="txt">
+  <button onclick="addLI()">Add</button>
+  <button onclick="editLI()">Edit</button>
+  <button onclick="deleteLI()">Delete</button>
+
+  <ul id="list">
     <li>All-New Fire 7 Tablet</li>
     <li>Flash Furniture Yellow Metal Indoor-Outdoor Chair with Arms</li>
     <li>Amazon Echo</li>
