added DOM Events to nav menu

--- a/nav-menu.html
+++ b/nav-menu.html
@@ -72,6 +72,7 @@
           <button class="week transition-all">Week 08</button>
             <div class="dropdown-content">
               <a href="../../08week/tic-tac-toe/index.html" class="nav-link transition-all">Tic Tac Toe</a>
+              <a href="../../08week/dom-events/index.html" class="nav-link transition-all">DOM Events</a>
             </div>
       </div>
 
