--- a/home-nav-menu.html
+++ b/home-nav-menu.html
@@ -72,6 +72,7 @@
         <button class="week">Week 08</button>
         <div class="dropdown-content">
           <a href="08week/tic-tac-toe/index.html" class="nav-link">Tic Tac Toe</a>
+          <a href="08week/dom-events/index.html" class="nav-link">DOM Events</a>
         </div>
       </div>
 
