--- a/08week/dom-events/index.html
+++ b/08week/dom-events/index.html
@@ -52,6 +52,9 @@
   <!-- scripts   -->
   <script type="text/javascript" src="../../simple-scrollbar/simple-scrollbar.js"></script>
   <script type="text/javascript" src="../../js/nav-menu.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
+
 
   <!-- End Document
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
