done with initial setup

--- a/08week/dom-events/index.html
+++ b/08week/dom-events/index.html
@@ -46,7 +46,13 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
   <main>
-    <div class="container-main"></div>
+    <div class="container-main">
+      <div class="container-inner">
+        <div class="box" id="counter-1">1</div>
+        <div class="box" id="counter-10">10</div>
+        <div class="box" id="counter-100">100</div>
+      </div>
+    </div>
   </main>
 
   <!-- scripts   -->
