added count all and reset boxes

--- a/08week/dom-events/index.html
+++ b/08week/dom-events/index.html
@@ -51,6 +51,8 @@
         <div class="box" id="counter-1">1</div>
         <div class="box" id="counter-10">10</div>
         <div class="box" id="counter-100">100</div>
+        <div class="box" id="counter-all">All</div>
+        <div class="box" id="reset">Clr</div>
       </div>
     </div>
   </main>
