bio draft; Created page, added images, videos, description, etc...

--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -18,7 +18,11 @@
     <nav>
 
         <ul>
-           
+                <li>
+                        <a href ="bio.html">
+                             Bio
+                        </a>
+                    </li> 
             <li>
                 <a href ="Education.html">
                      Education
