added html content

--- a/06week/Checkpoint2/index.html
+++ b/06week/Checkpoint2/index.html
@@ -11,16 +11,19 @@
 </head>
 
 <body>
-  <!--Container for everytihng-->
+  <!--Main Container -->
   <div class="container">
+<!--My initials with different font and a circle border around it-->
     <div class="header">
       <div class="initials">BT</div>
     </div>
+
     <!--Hero Box containing name and title centered on page with a shadow border-->
     <div class="hero">
       <h1>Brandon Turner</h1>
       <h1>Web Developer</h1>
     </div>
+
     <div class="contact">
       <form>
       <h1>Contact Me</h1>
@@ -37,9 +40,24 @@
         <button class="button">SUBMIT</button>
       </form>
       </div>
-    <p class="copyright">Brandon Turner 2018</p>
+
+    <p class="copyright">Brandon Turner, 2018</p>
+
+    <div class="bottom-hero">
+
+      <h1 class="title">Objective</h1>
+      
+      <div class="objective">
+        Utilize my 15 years of management experience to transition into a successful career as a web developer with a company that values pride, teamwork, and education.</div>
+
+      <div class="experience">HTML5, CSS3, JavaScript, jQuery, WordPress, Git, Wireframing.
+          10 years in the role of restaurant management with an emphasis on financial reporting, inventory procedures, sales growth, education, and team building.
+          </div>
+
+    </div>
+
+
+
   </div>
-
-
 </body>
 </html>
