Adding Landing Page:

--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 
-<div class="container">
+<div class="container-fluid">
 	<div class="jumbotron">
-		<h1>Neil Cho <a class="fab fa-linkedin" href="https://www.linkedin.com/in/neil-cho-099298172"></a></h1>
+		<h1><a href="../..web-workbook/02week/bio/index.html"> Neil Cho </a><a class="fab fa-linkedin" href="https://www.linkedin.com/in/neil-cho-099298172"></a></h1>
  <!-- <h1>Neil Cho <a href="https://www.linkedin.com/in/neil-cho-099298172"><i class="fab fa-linkedin"></a></i></h1> -->
  	<p>Student Programmer | IT Professional <span class="tab-b"> neilcho83@gmail.com</span></p>
 	</div>
@@ -109,7 +109,7 @@
 </div>
 
 <footer>
-	<h5><p><i class="far fa-copyright"></i> Neil Cho</p></h5>
+	<h5><p><i class="far fa-copyright"></i> Copyright 2018</p></h5>
 	<h5><p><i class="fas fa-envelope"></i> neilcho83@gmail.com</p></h5>
 	<ht><p><a class="fab fa-rocketchat" href="https://chat.austincodingacademy.com/direct/neilcho-1113"></a> @neilcho-1113</p></h5>
 </footer>
