Updating index for landing

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <!-- <h1>[Your Name] Workbook</h1> -->
-  <h1>Neil's Workbook</h1>
+  <h1>Neil's Landing Page</h1>
   <section class="week">
     <h2>Week 1</h2>
     <a href="01week/resume/index.html">Resume</a>
