--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -67,7 +67,6 @@
        <li>Project quality control and assessment. Ensures that adequate
          procedures, method, and techniques are established in all programs
           and operations. </li>
-          <li>the only way to achieve your goals is to jump in! </li>
      </ul>
 
  <h4 style="color:gold"> Newton High School </h4>
@@ -117,7 +116,7 @@
          <li>Outreach to local companies and organizations to establish
             alliances.</li>
           </ul>
-<img src="corny.jpg">
+<img src="./images/me.JPG">
     
 </body>
 
