--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <section class="week">
     <h2>Week 2</h2>
-    <a href="../web-workbook/02week/bio/index.html">Bio</a>
+    <a href="./02week/bio/index.html">Bio</a>
   </section>
 
   <section class="week">
