removed ugly styling

--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -9,21 +9,21 @@
 
 </head>
 
-<body style="background-color:lightgrey;">
+<body>
   <h1>Michael Snowden</h1>
   512.765.1415 mtsnowden@gmail.com
  <hr>
  <h2> Summary </h2>
- <p style="color:red;">Charismatic, talented and diligent professional offering expertise in
+ <p>Charismatic, talented and diligent professional offering expertise in
    business management, customer service and communications. Poised and
      competent team builder and natural leader who thrives in fast-paced work
      environments.</p>
  <h2> Experience </h2>
  
- <h3 style="color:gold"> Golds Gym </h3>
+ <h3> Golds Gym </h3>
  Front Desk Manager<br>
  Killeen, Texas July 2018 - Present
- <ul style="list-style-type:circle">
+ <ul>
    <li>Ensure consistent service excellence by all team members. </li>
    <li>Responsible for the monthly inventory process to be completed accurately
       and on time, including managing and receiving orders for retail &
@@ -36,10 +36,10 @@
            basis.</li>
          </ul>
          
- <h4 style="color:gold"> Vida Fitness </h4>
+ <h4> Vida Fitness </h4>
  Team Supervisor<br>
  Washington, DC Jan 2017 - Jun 2018
-<ul style="list-style-type: georgian">
+<ul>
   <li>Provided the highest level of customer service to members, prospective
      members and guests. </li>
      <li>Consistent application and enforcement of workplace policies and
@@ -51,10 +51,10 @@
          shortages and running daily inventory reports.</li>
 </ul>
 
- <h4 style="color:gold"> The Lab ATX </h4>
+ <h4> The Lab ATX </h4>
  Facility Director<br>
  Austin, Texas Sept 2015 - Dec 2016
- <ul style="list-style-type:square">
+ <ul>
    <li>Direct the activities of all facility functions, assigns duties and
      delegates authority to accomplish them. </li>
      <li>Developed and enforced policies and directives for efficient
@@ -69,7 +69,7 @@
           and operations. </li>
      </ul>
 
- <h4 style="color:gold"> Newton High School </h4>
+ <h4> Newton High School </h4>
  Fine Arts Instructor<br>
  Newton, Texas Aug 2013 - Jun 2015 
  <ul>
@@ -104,7 +104,7 @@
    <li> Budget planning</li>
  </ul>
 
- <h4 style=color:navy;> Volunteer Experience </h4>
+ <h4> Volunteer Experience </h4>
  Human Rights Campaign <br>
  Membership Outreach Coordinator<br>
  Austin, Texas 2015-2016
