--- a/06week/dice/index.html
+++ b/06week/dice/index.html
@@ -6,7 +6,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>New Project</title>
+  <title>Dice</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
