--- a/index.html
+++ b/index.html
@@ -1,10 +1,59 @@
 <!DOCTYPE html>
 <html>
   <head>
+      <link rel=stylesheet type ="text/css" href=style.css>
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
-    <h1>Hello world!</h1>
+    <div id ="wrapper">
+      <header>
+        <h1>Landing</h1>
+      </header>
+
+      <article>
+        <!-- <img src ="images/img1.jpg"> -->
+      </article>
+
+      <article>
+        <!-- Week 2 -->
+      </article>
+
+      <article>
+        Week 3
+      </article>
+
+      <article>
+          Week 4
+      </article>
+   
+      <article>
+           Week 5
+      </article>
+   
+      <article>
+           Week 6
+      </article>
+
+      <article>
+          Week 7
+      </article>
+   
+      <article>
+           Week 8
+      </article>
+   
+      <article>
+           Week 9
+      </article>
+
+      <article>
+          Week 10
+      </article>
+      
+
+
+    </div>
   </body>
+  
 </html>
