--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -8,7 +8,7 @@
 <body>
     <main>
         <header>
-            <img src="../linkedinphoto.jpg" alt="Aaron Altounian plays guitar in front of a wall of amps." class="center" width="540" height="304"/>
+            <img src="./assets/linkedinphoto.jpg" alt="Aaron Altounian plays guitar in front of a wall of amps." class="center" width="540" height="304"/>
         </header>
 
         <section>
