copied starting point code and made minor changes

--- a/08week/tic-tac-toe/index.html
+++ b/08week/tic-tac-toe/index.html
@@ -24,21 +24,24 @@
 </head>
 
 <body>
+
   <main>
-    <div class="row">
-      <div data-cell="0"></div>
-      <div data-cell="1"></div>
-      <div data-cell="2"></div>
-    </div>
-    <div class="row">
-      <div data-cell="3"></div>
-      <div data-cell="4"></div>
-      <div data-cell="5"></div>
-    </div>
-    <div class="row">
-      <div data-cell="6"></div>
-      <div data-cell="7"></div>
-      <div data-cell="8"></div>
+    <div id="board">
+      <div class="row">
+        <div data-cell="0" class="data-cell"></div>
+        <div data-cell="1" class="data-cell"></div>
+        <div data-cell="2" class="data-cell"></div>
+      </div>
+      <div class="row">
+        <div data-cell="3" class="data-cell"></div>
+        <div data-cell="4" class="data-cell"></div>
+        <div data-cell="5" class="data-cell"></div>
+      </div>
+      <div class="row">
+        <div data-cell="6" class="data-cell"></div>
+        <div data-cell="7" class="data-cell"></div>
+        <div data-cell="8" class="data-cell"></div>
+      </div>
     </div>
     <div id="announce-winner"></div>
     <button id="clear">Clear Board</button>
