final final final? Im having issues

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
       <article>
         <h2>RESUME</h2>
-        <h2>WEEK 1</h2>
+        <h2>WEEK</h2>
         
         
         <a href = "01week/resume/index.html">
