Added TicTacToe game

--- a/08week/dom-events/index.html
+++ b/08week/dom-events/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>DOM Events</title>
   <link rel="stylesheet" href="./css/style.css" />
+
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 </head>
 
 <body>
@@ -14,6 +16,7 @@
   <div class="box" id="box-all">Click All</div>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script type="text/javascript" src="./js/script.js"></script>
 </body>
