working on links

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h2>Week 1</h2>
     <a href="01week/helloworld/index.html">Hello World</a>
     <br />
-    <a href="01week/resume/index.html">Resume</a>
+    <a href="../01week/resume/index.html">Resume</a>
   </section>
 
   <section class="week">
