--- a/08week/tic-tac-toe/index.html
+++ b/08week/tic-tac-toe/index.html
@@ -3,26 +3,27 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tic Tac Toe</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./reset.css" />
+  <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
   <div class="row">
-    <div data-cell="0"></div>
-    <div data-cell="1"></div>
-    <div data-cell="2"></div>
+    <div data-cell="0" class='col'>X</div>
+    <div data-cell="1" class='col'></div>
+    <div data-cell="2" class='col'></div>
   </div>
   <div class="row">
-    <div data-cell="3"></div>
-    <div data-cell="4"></div>
-    <div data-cell="5"></div>
+    <div data-cell="3" class='col'></div>
+    <div data-cell="4" class='col'>O</div>
+    <div data-cell="5" class='col'></div>
   </div>
   <div class="row">
-    <div data-cell="6"></div>
-    <div data-cell="7"></div>
-    <div data-cell="8"></div>
+    <div data-cell="6" class='col'></div>
+    <div data-cell="7" class='col'></div>
+    <div data-cell="8" class='col'>X</div>
   </div>
   <div id="announce-winner"></div>
-  <button id="clear">Clear Board</button>
+  <button id="restart">Restart</button>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="./script.js"></script>
 </body>
