--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
 <head>
   <meta charset="utf-8">
   <link type="text/css" rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Michroma" />
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Cabin" />
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Hammersmith+One" />
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Cantarell" />
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu" />
   <title>Michael's Web Workbook</title>
+
 </head>
 
 <body>
   <!-- <h1>Michael Snowden's Workbook</h1> -->
-  <h1>Michael's Workbook</h1>
+  <h1>Michael Snowden <br>Workbook</h1>
+
+  <main>
   <section class="week">
     <h2>Week 1</h2>
     <a href="../01week/helloworld/index.html">Hello World</a>
@@ -61,6 +69,7 @@
     <h2>Week 10</h2>
       <!-- link projects here -->
   </section>
+  </main> 
 </body>
 
 </html>
