Added bio and project pages

--- a/index.html
+++ b/index.html
@@ -1,10 +1,116 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h1>Hello world!</h1>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <link type="text/css" rel="stylesheet" href="style.css" />
+  <title>Project Albums</title>
+  <link href="https://fonts.googleapis.com/css?family=Space+Mono:400,400i,700,700i" rel="stylesheet">
+</head>
+
+
+<body>
+  <!-- <h1>Jonny's Workbook</h1> -->
+  <div class="hero">
+    <h1>Jonny's-Greatest-Hits-Fall-2018</h1>
+    <hr>
+    <p>Austin-Coding-Academy</p>
+    <a href="https://github.com/jonnyabowd/web-workbook">https://github.com/jonnyabowd/web-workbook->
+    </a>
+  </div>
+
+  <div class="projectLayout">
+    <section class="week">
+      <div class="date">10<br>//<br>01</div>
+      <h2>Week-1</h2>
+      <hr>
+      <p>Project-Links:</p>
+      <a href="01week/helloworld/index.html">Hello-World-></a>
+      <br />
+      <a href="01week/resume/index.html">Resume-></a>
+    </section>
+
+    <section class="week">
+      <div class="date">10<br>//<br>08</div>
+      <h2>Week-2</h2>
+      <hr>
+      <p>Project-Links:</p>
+      <a href="02week/bio/index.html">Bio-></a>
+    </section>
+
+    <section class="week">
+      <div class="date">10<br>//<br>15</div>
+      <h2>Week-3</h2>
+      <hr>
+      <p>Project-Links:</p>
+      <!-- link projects here -->
+      <a href="index.html" class="disabled">N/A</a>
+    </section>
+  
+    <section class="week">
+      <div class="date">10<br>//<br>22</div>
+      <h2>Week-4</h2>
+      <hr>
+      <p>Project-Links:</p>
+      <!-- link projects here -->
+      <a href="index.html" class="disabled">N/A</a>
+    </section>
+  
+    <section class="week">
+      <div class="date">10<br>//<br>29</div>
+      <h2>Week-5</h2>
+      <hr>
+      <p>Project-Links:</p>
+      <!-- link projects here -->
+      <a href="index.html" class="disabled">N/A</a>
+    </section>
+  
+    <section class="week">
+      <div class="date">11<br>//<br>05</div>
+      <h2>Week-6</h2>
+      <hr>
+      <p>Project-Links:</p>
+      <!-- link projects here -->
+      <a href="index.html" class="disabled">N/A</a>
+    </section>
+  
+    <section class="week">
+      <div class="date">11<br>//<br>12</div>
+      <h2>Week-7</h2>
+      <hr>
+      <p>Project-Links:</p>
+      <!-- link projects here -->
+      <a href="index.html" class="disabled">N/A</a>
+    </section>
+  
+    <section class="week">
+      <div class="date">11<br>//<br>26</div>
+      <h2>Week-8</h2>
+      <hr>
+      <p>Project-Links:</p>
+      <!-- link projects here -->
+      <a href="index.html" class="disabled">N/A</a>
+    </section>
+  
+    <section class="week">
+      <div class="date">12<br>//<br>03</div>
+      <h2>Week-9</h2>
+      <hr>
+      <p>Project-Links:</p>
+      <!-- link projects here -->
+      <a href="index.html" class="disabled">N/A</a>
+    </section>
+  
+    <section class="week">
+      <div class="date">12<br>//<br>10</div>
+      <h2>Week-10</h2>
+      <hr>
+      <p>Project-Links:</p>
+      <!-- link projects here -->
+      <a href="index.html" class="disabled">N/A</a>
+    </section>
+  </div>
+
+</body>
+
 </html>
