landing page update

--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -2,17 +2,28 @@
 <html>
 <head>
 	<title>Neil's resume</title>
-	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<!-- <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+	<!-- updated to a newer bootstrap cdn on 10/14/18 @ 11PM -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="./css/backgrounds.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 
 </head>
 <body>
+		<div>
+		<nav class="navbar navbar-light mx-auto position: fixed;">
+			 <a class="navbar-brand" href="../../index.html">Home</a>
+			 <a class="navbar-brand" href="../../02week/bio/index.html">Bio</a>
+			 <a class="navbar-brand" href="../../01week/resume/index.html">Resume</a>
+			 <a class="navbar-brand" href="../../02week/bio/photos.html">Photos</a>
+			 <a class="navbar-brand" href="contact.html">Contact</a>
+		</nav>
+	</div>
 
 <div class="container-fluid">
 	<div class="jumbotron">
-		<h1><a href="../..web-workbook/02week/bio/index.html"> Neil Cho </a><a class="fab fa-linkedin" href="https://www.linkedin.com/in/neil-cho-099298172"></a></h1>
+		<h1><a href="../../index.html"> Neil Cho </a><a class="fab fa-linkedin" href="https://www.linkedin.com/in/neil-cho-099298172"></a></h1>
  <!-- <h1>Neil Cho <a href="https://www.linkedin.com/in/neil-cho-099298172"><i class="fab fa-linkedin"></a></i></h1> -->
  	<p>Student Programmer | IT Professional <span class="tab-b"> neilcho83@gmail.com</span></p>
 	</div>
