--- a/index.html
+++ b/index.html
@@ -1,64 +1,129 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <meta charset="utf-8">
-  <link type="text/css" rel="stylesheet" href="style.css" />
-  <title>Web Workbook</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+  <title>Landing Page</title>
 </head>
 
 <body>
-  <!-- <h1>[Your Name] Workbook</h1> -->
-  <h1>Neil's Landing Page</h1>
-  <section class="week">
-    <h2>Week 1</h2>
+
+<div class="header">
+  <h1 class="top">Neil Cho</h1>
+
+  <hr>
+
+  </div>
+
+    <nav class="navbar navbar-light mx-auto position: fixed;">
+       <a class="navbar-brand" href="index.html">Home</a>
+       <a class="navbar-brand" href="02week/bio/index.html">Bio</a>
+       <a class="navbar-brand" href="01week/resume/index.html">Resume</a>
+       <a class="navbar-brand" href="02week/bio/photos.html">Photos</a>
+       <a class="navbar-brand" href="contact.html">Contact</a>
+    </nav>
+  </div>
+
+  <hr>
+  <br>
+
+<div class=projectheader>
+<h3>Past Projects</h1>
+  <br>
+  <section>
+    <h3>Week 1</h3>
+
     <a href="01week/resume/index.html">Resume</a>
-  </section>
 
-  <section class="week">
-    <h2>Week 2</h2>
+  </section>
+  <br>
+
+  <section>
+    <h3>Week 2</h3>
     <a href="02week/bio/index.html">Bio</a>
-  </section>
 
-  <section class="week">
-    <h2>Week 3</h2>
+  </section>
+</div>
+
+  <hr>
+  <br>
+
+<div class="projectheader">
+<h3>Upcoming Projects</h3>
+<br>
+
+  <section>
+    <h3>Week 3</h3>
       <!-- link projects here -->
   </section>
-
-  <section class="week">
-    <h2>Week 4</h2>
+  <br>
+  <section>
+    <h3>Week 4</h3>
     <!-- link projects here -->
   </section>
-
-  <section class="week">
-    <h2>Week 5</h2>
+  <br>
+  <section>
+    <h3>Week 5</h3>
     <!-- link projects here -->
   </section>
-
-  <section class="week">
-    <h2>Week 6</h2>
+  <br>
+  <section>
+    <h3>Week 6</h3>
   <!-- link projects here -->
   </section>
-
-  <section class="week">
-    <h2>Week 7</h2>
+  <br>
+  <section>
+    <h3>Week 7</h3>
     <!-- link projects here -->
   </section>
-
-  <section class="week">
-    <h2>Week 8</h2>
+  <br>
+  <section >
+    <h3>Week 8</h3>
     <!-- link projects here -->
   </section>
-
-  <section class="week">
-    <h2>Week 9</h2>
+  <br>
+  <section>
+    <h3>Week 9</h3>
       <!-- link projects here -->
   </section>
-
-  <section class="week">
-    <h2>Week 10</h2>
+  <br>
+  <section>
+    <h3>Week 10</h3>
       <!-- link projects here -->
   </section>
+  <br>
+  
+</div>
+
+      <br>
+      <br>
+      
+
+<hr>
+<footer> 
+  <h3>
+<!--    <a href="https://www.linkedin.com/" i class="fab fa-linkedin"></i></a>
+    <a href="https://www.github.com/" i class="fab fa-git"></a></i>
+    <a href="mailto:neilcho83@gmail.com" i class="fas fa-envelope-square"></a></i>
+    <a href="https://jsfiddle.net/" i class="fab fa-jsfiddle"></a></i>
+ -->
+  <!--  Above code will not allow for the underline to go away even with text-decoration: none -->
+
+    <a href="https://www.linkedin.com/">
+    <i class="fab fa-linkedin"></a></i>
+    
+    <a href="https://www.github.com/">
+    <i class="fab fa-git"></a></i>
+    <a href="mailto:neilcho83@gmail.com">
+    <i class="fas fa-envelope-square"></a></i>
+    <a href="https://jsfiddle.net/">
+    <i class="fab fa-jsfiddle"></a></i>
+
+  </h3>©Copyright 2018 
+</footer>
+
 </body>
 
 </html>
