--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -1,122 +1,152 @@
 
 <!DOCTYPE html>
+
 <html>
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
- <title>Michael Snowden Resume</title>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" type="text/css" href="css/style.css">
+<title>Michael Snowden Resume</title>
 </head>
 
+
 <body>
-  <h1>Michael Snowden</h1>
-  512.765.1415 mtsnowden@gmail.com
- <hr>
- <h2> Summary </h2>
- <p>Charismatic, talented and diligent professional offering expertise in
-   business management, customer service and communications. Poised and
-     competent team builder and natural leader who thrives in fast-paced work
-     environments.</p>
- <h2> Experience </h2>
- 
- <h3> Golds Gym </h3>
- Front Desk Manager<br>
- Killeen, Texas July 2018 - Present
- <ul>
-   <li>Ensure consistent service excellence by all team members. </li>
-   <li>Responsible for the monthly inventory process to be completed accurately
-      and on time, including managing and receiving orders for retail &
-      concessions. </li>
-      <li>Ensures that all front desk policies and procedures are followed,
+  <header>
+    <h1>Michael Snowden</h1>
+    512.765.1415 mtsnowden@gmail.com
+  
+    <img src="./images/me.JPG">
+  </header>
+
+  <!-- ---------------------------------------------->
+
+  <h2> Summary </h2>
+
+  <p>Charismatic, talented and diligent professional offering expertise in
+      business management, customer service and communications. Poised and
+      competent team builder and natural leader who thrives in fast-paced work
+      environments.</p>
+
+
+  <!-- ---------------------------------------------->
+
+  <h2> Experience </h2>
+
+  <h3> Golds Gym </h3>
+
+  Front Desk Manager<br>
+  Killeen, Texas July 2018 - Present
+
+  <ul>
+    <li>Ensure consistent service excellence by all team members. </li>
+    <li>Responsible for the monthly inventory process to be completed accurately
+        and on time, including managing and receiving orders for retail &
+        concessions. </li>
+    <li>Ensures that all front desk policies and procedures are followed,
         such as proper member check-in, telephone inquiry, guest registration,
         replacement of member ID cards, delinquent account procedures,
         account change requests & updates, travel/guest passes. </li>
-        <li>Maintains personal sales production expectations on monthly
-           basis.</li>
-         </ul>
+    <li>Maintains personal sales production expectations on monthly
+        basis.</li>
+  </ul>
          
- <h4> Vida Fitness </h4>
- Team Supervisor<br>
- Washington, DC Jan 2017 - Jun 2018
-<ul>
-  <li>Provided the highest level of customer service to members, prospective
-     members and guests. </li>
-     <li>Consistent application and enforcement of workplace policies and
-       procedures.</li>
-     <li>Oversee the day-to-day operations of the front desk. Manage and
-       continually strive to increase the effectiveness and efficiency of
-       operations in support of the company sales.</li>
-       <li>Monitored inventory levels by forecasting demand, evaluating potential
-         shortages and running daily inventory reports.</li>
-</ul>
+  <!-- ...................... -->
 
- <h4> The Lab ATX </h4>
- Facility Director<br>
- Austin, Texas Sept 2015 - Dec 2016
- <ul>
-   <li>Direct the activities of all facility functions, assigns duties and
-     delegates authority to accomplish them. </li>
-     <li>Developed and enforced policies and directives for efficient
-       administration.</li>
-     <li>Supplemented policies with written guidelines and procedures.</li>
-     <li>Manage and continually strive to increase the effectiveness and
-       efficiency of operations services in support of the company sales.
-       Improve operation systems, process, and policies to support the
-       company's departments.</li>
-       <li>Project quality control and assessment. Ensures that adequate
-         procedures, method, and techniques are established in all programs
-          and operations. </li>
-     </ul>
+  <h4> Vida Fitness </h4>
+  Team Supervisor<br>
+  Washington, DC Jan 2017 - Jun 2018
 
- <h4> Newton High School </h4>
- Fine Arts Instructor<br>
- Newton, Texas Aug 2013 - Jun 2015 
- <ul>
-   <li>Compiled a dynamic syllabus for the school year and implemented
-     curriculum.</li>
-     <li>Established a safe, inclusive and respectful learning environment for
-       a diverse population by: engaging students as individuals with unique
-       interests and strengths, supporting learners and actively engaging in
+  <ul>
+    <li>Provided the highest level of customer service to members, prospective
+        members and guests. </li>
+    <li>Consistent application and enforcement of workplace policies and
+        procedures.</li>
+    <li>Oversee the day-to-day operations of the front desk. Manage and
+        continually strive to increase the effectiveness and efficiency of
+        operations in support of the company sales.</li>
+    <li>Monitored inventory levels by forecasting demand, evaluating potential
+        shortages and running daily inventory reports.</li>
+  </ul>
+
+  <!-- ....................... -->
+
+  <h4> The Lab ATX </h4>
+  Facility Director<br>
+  Austin, Texas Sept 2015 - Dec 2016
+
+  <ul>
+    <li>Direct the activities of all facility functions, assigns duties and
+        delegates authority to accomplish them. </li>
+    <li>Developed and enforced policies and directives for efficient
+        administration.</li>
+    <li>Supplemented policies with written guidelines and procedures.</li>
+    <li>Manage and continually strive to increase the effectiveness and
+        efficiency of operations services in support of the company sales.
+        Improve operation systems, process, and policies to support the
+        company's departments.</li>
+    <li>Project quality control and assessment. Ensures that adequate
+        procedures, method, and techniques are established in all programs
+        and operations. </li>
+  </ul>
+
+  <!-- ....................... -->
+
+  <h4> Newton High School </h4>
+  Fine Arts Instructor<br>
+  Newton, Texas Aug 2013 - Jun 2015 
+
+  <ul>
+    <li>Compiled a dynamic syllabus for the school year and implemented
+        curriculum.</li>
+    <li>Established a safe, inclusive and respectful learning environment for
+        a diverse population by: engaging students as individuals with unique
+        interests and strengths, supporting learners and actively engaging in
         differentiated classroom activities, facilitating students discussing
         content and making connections between the current lesson and their
         interests.</li>
-        <li>Provided research-based strategies to increase creativity,
-          critical thinking skills and collaboration in  personally meaningful
-           ways to each student.</li>
-           <li>Maintained a dialogue with parents/guardians to further
-             facilitate the success of each student.</li>
-             <li>Exposed students to the endless possibilities of artistic
-                processes and the personal and social benefits of creative
-                 expression. </li>
-               </ul>
+    <li>Provided research-based strategies to increase creativity,
+        critical thinking skills and collaboration in  personally meaningful
+        ways to each student.</li>
+    <li>Maintained a dialogue with parents/guardians to further
+        facilitate the success of each student.</li>
+    <li>Exposed students to the endless possibilities of artistic
+        processes and the personal and social benefits of creative
+        expression. </li>
+  </ul>
 
- <h2> Education </h2>
- Lamar University <br>
- Bachelor of Fine Arts: Studio Art<br>
- Minor areas of study: Communications, Environmental Science<br>
- Beaumont, Texas 2012
- <h4>Technical Skills</h4>
- <ul>
+  <!-- ---------------------------------------------- -->
+  <h2> Education </h2>
+
+  Lamar University <br>
+  Bachelor of Fine Arts: Studio Art<br>
+  Minor areas of study: Communications, Environmental Science<br>
+  Beaumont, Texas 2012
+
+  <!-- ..................... -->
+  
+  <h4>Technical Skills</h4>
+  <ul>
    <li> Task delegation and management</li>
    <li> Quality control </li>
    <li> Project planning </li>
    <li> Budget planning</li>
- </ul>
+  </ul>
 
- <h4> Volunteer Experience </h4>
- Human Rights Campaign <br>
- Membership Outreach Coordinator<br>
- Austin, Texas 2015-2016
- <ul>
-   <li>Develop and implement various strategies intended to recruit and retain
-      members.</li>
-      <li>Perform research necessary to develop, plan and implement campaigns
-         to help drive membership and community knowledge.</li>
-         <li>Outreach to local companies and organizations to establish
-            alliances.</li>
-          </ul>
-<img src="./images/me.JPG">
+  <!-- --------------------------------------------- -->
+  <h4> Volunteer Experience </h4>
+
+  Human Rights Campaign <br>
+
+  Membership Outreach Coordinator<br>
+  Austin, Texas 2015-2016
+  <ul>
+    <li>Develop and implement various strategies intended to recruit and retain
+        members.</li>
+    <li>Perform research necessary to develop, plan and implement campaigns
+        to help drive membership and community knowledge.</li>
+    <li>Outreach to local companies and organizations to establish
+        alliances.</li>
+  </ul>
     
 </body>
 
