final. floated images left with text next to them

--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -142,27 +142,17 @@
 
   <h2> Education </h2>
 
-    <img src="images/Lamar-Cardinal.png"><br>
+    <p><img class="lamar" src="images/Lamar-Cardinal.png" alt="Lamar-Cardinal"><br>
     
     Lamar University <br>
     Bachelor of Fine Arts: Studio Art<br>
     Minor areas of study: Communications, Environmental Science<br>
-    Beaumont, Texas 2012
-
-  <!-- ..................... -->
-  
-  <h4>Technical Skills</h4>
-    <ul>
-     <li> Task delegation and management</li>
-     <li> Quality control </li>
-     <li> Project planning </li>
-     <li> Budget planning</li>
-    </ul>
+    Beaumont, Texas 2012</p><br>
 
   <!-- --------------------------------------------- -->
   <h4> Volunteer Experience </h4>
 
-    <img src="images/hrc12944_1_2.jpg"><br>
+    <p><img class="hrc" src="images/hrc12944_1_2.jpg" alt="hrc-logo"><br>
 
     Human Rights Campaign <br>
 
@@ -176,7 +166,18 @@
      <li>Outreach to local companies and organizations to establish
          alliances.</li>
     </ul>
-    
+    </p>
+
+  <!-- ..................... -->
+  
+  <h4>Technical Skills</h4>
+  <ul>
+   <li> Task delegation and management</li>
+   <li> Quality control </li>
+   <li> Project planning </li>
+   <li> Budget planning</li>
+  </ul>
+
 </body>
 
 </html>
