--- a/index.html
+++ b/index.html
@@ -1,66 +1,58 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  
+ <head>
   <meta charset="utf-8">
   <link type="text/css" rel="stylesheet" href="style.css" />
   <title>Web Workbook</title>
 </head>
-
-<body>
-  <!-- <h1>[Your Name] Workbook</h1> -->
+ <body>
+  <div class="box">
+    <img alt='' class="box-img">
+   <!-- <h1>[Your Name] Workbook</h1> -->
+  <div id="header">
   <h1>Sam's Workbook</h1>
+    </div>
   <section class="week">
     <h2>Week 1</h2>
-    <a href="01week/helloworld/index.html">Hello World</a>
-    <br />
-    <a href="01week/resume/index.html">Resume</a>
+    <a href="01week/resume/firstDay.html">Resume</a>
   </section>
-
-  <section class="week">
+   <section class="week">
     <h2>Week 2</h2>
     <a href="02week/bio/index.html">Bio</a>
   </section>
-
-  <section class="week">
+   <section class="week">
     <h2>Week 3</h2>
       <!-- link projects here -->
   </section>
-
-  <section class="week">
+   <section class="week">
     <h2>Week 4</h2>
     <!-- link projects here -->
   </section>
-
-  <section class="week">
+   <section class="week">
     <h2>Week 5</h2>
     <!-- link projects here -->
   </section>
-
-  <section class="week">
+   <section class="week">
     <h2>Week 6</h2>
   <!-- link projects here -->
   </section>
-
-  <section class="week">
+   <section class="week">
     <h2>Week 7</h2>
     <!-- link projects here -->
   </section>
-
-  <section class="week">
+   <section class="week">
     <h2>Week 8</h2>
     <!-- link projects here -->
   </section>
-
-  <section class="week">
+   <section class="week">
     <h2>Week 9</h2>
       <!-- link projects here -->
   </section>
-
-  <section class="week">
+   <section class="week">
     <h2>Week 10</h2>
       <!-- link projects here -->
+  </div>
   </section>
 </body>
-
-</html>
+ </html>
