getting some tic tac toe done

--- a/08week/tic-tac-toe/index.html
+++ b/08week/tic-tac-toe/index.html
@@ -8,19 +8,19 @@
 </head>
 <body>
   <div class="row">
-    <div data-cell="0" class='col'>'</div>
-    <div data-cell="1" class='col'>'</div>
-    <div data-cell="2" class='col'>'</div>
+    <div class='col' data-i=0 data-j=0>y</div>
+    <div class='col' data-i=0 data-j=1>y</div>
+    <div class='col' data-i=0 data-j=2>y</div>
   </div>
   <div class="row">
-    <div data-cell="3" class='col'>'</div>
-    <div data-cell="4" class='col'>'</div>
-    <div data-cell="5" class='col'>'</div>
+    <div class='col' data-i=1 data-j=0>y</div>
+    <div class='col' data-i=1 data-j=1>y</div>
+    <div class='col' data-i=1 data-j=2>y</div>
   </div>
   <div class="row">
-    <div data-cell="6" class='col'>'</div>
-    <div data-cell="7" class='col'>'</div>
-    <div data-cell="8" class='col'>'</div>
+    <div class='col' data-i=2 data-j=0>y</div>
+    <div class='col' data-i=2 data-j=1>y</div>
+    <div class='col' data-i=2 data-j=2>y</div>
   </div>
   <div id="announce-winner"></div>
   <button id="restart">Restart</button>
