--- a/08week/tic-tac-toe/index.html
+++ b/08week/tic-tac-toe/index.html
@@ -8,19 +8,19 @@
 </head>
 <body>
   <div class="row">
-    <div class='col' data-i=0 data-j=0>y</div>
-    <div class='col' data-i=0 data-j=1>y</div>
-    <div class='col' data-i=0 data-j=2>y</div>
+    <div class='col' data-i=0 data-j=0></div>
+    <div class='col' data-i=0 data-j=1></div>
+    <div class='col' data-i=0 data-j=2></div>
   </div>
   <div class="row">
-    <div class='col' data-i=1 data-j=0>y</div>
-    <div class='col' data-i=1 data-j=1>y</div>
-    <div class='col' data-i=1 data-j=2>y</div>
+    <div class='col' data-i=1 data-j=0></div>
+    <div class='col' data-i=1 data-j=1></div>
+    <div class='col' data-i=1 data-j=2></div>
   </div>
   <div class="row">
-    <div class='col' data-i=2 data-j=0>y</div>
-    <div class='col' data-i=2 data-j=1>y</div>
-    <div class='col' data-i=2 data-j=2>y</div>
+    <div class='col' data-i=2 data-j=0></div>
+    <div class='col' data-i=2 data-j=1></div>
+    <div class='col' data-i=2 data-j=2></div>
   </div>
   <div id="announce-winner"></div>
   <button id="restart">Restart</button>
