linter corrections to code

--- a/04week/nasa/index.html
+++ b/04week/nasa/index.html
@@ -14,14 +14,14 @@
       <div class="nasa">NASA</div>
     </div>
     <div class="bottombox">
-      <div class="left-innerBottomBox">
+      <div class="left-inner-bottom-box">
         <h3>Social Media</h3>
         <p>Twitter-@nasa</p>
         <p>Facebook-fb.com/nasa</p>
         <p>Instagram-@nasa</p>
         <p>Youtube-youtube.com/NASA</p>
       </div>
-      <div class="middle-innerBottomBox">
+      <div class="middle-inner-bottom-box">
         <h3>OFFICE INFO</h3>
         <p>Public Communication Office</p>
         <p>Nasa Headquarters</p>
@@ -30,15 +30,15 @@
         <p>(202)-358-0001 (office)</p>
         <p>(202)-358-4338 (Fax)</p>
       </div>
-      <div class="right-innerBottomBox">
+      <div class="right-inner-bottom-box">
         <h3>CONTACT US</h3>
         <form></form>
         <div class="topname">
-          <label>Name</label>
+          Name
           <input type="text" value="Text">
         </div>
         <div class="bottommsg">
-          <label>Message</label>
+          Message
           <textarea></textarea>
           <button>SEND</button>
         </div>
