--- a/06week/Checkpoint2/index.html
+++ b/06week/Checkpoint2/index.html
@@ -13,7 +13,7 @@
 <body>
   <!--Main Container -->
   <div class="container">
-<!--My initials with different font and a circle border around it-->
+    <!--My initials with different font and a circle border around it-->
     <div class="header">
       <div class="initials">BT</div>
     </div>
@@ -26,11 +26,8 @@
 
     <div class="contact">
       <form>
-      <h1>Contact Me</h1>
-      <!--footer containing text boxes-->
-        <label for="name" class="name">Name:
-          <input type="text">
-        </label>
+        <h1>Contact Me</h1>
+        <!--footer containing text boxes-->
         <label class="email">Email:
           <input type="email">
         </label>
@@ -39,20 +36,22 @@
         </label>
         <button class="button">SUBMIT</button>
       </form>
-      </div>
+    </div>
 
     <p class="copyright">Brandon Turner, 2018</p>
 
     <div class="bottom-hero">
 
       <h1 class="title">Objective</h1>
-      
+
       <div class="objective">
-        Utilize my 15 years of management experience to transition into a successful career as a web developer with a company that values pride, teamwork, and education.</div>
+        Utilize my 15 years of management experience to transition into a successful career as a web developer with a
+        company that values pride, teamwork, and education.</div>
 
       <div class="experience">HTML5, CSS3, JavaScript, jQuery, WordPress, Git, Wireframing.
-          10 years in the role of restaurant management with an emphasis on financial reporting, inventory procedures, sales growth, education, and team building.
-          </div>
+        10 years in the role of restaurant management with an emphasis on financial reporting, inventory procedures,
+        sales growth, education, and team building.
+      </div>
 
     </div>
 
@@ -60,4 +59,5 @@
 
   </div>
 </body>
+
 </html>
