--- a/06week/dice/index.html
+++ b/06week/dice/index.html
@@ -10,7 +10,7 @@
 <body>
   <h1>Dicey Results</h1>
   <div id="dice"></div><br>
-  <div class='button' onclick="roll()">Roll</div>
+  <div class="button" onclick="roll()">Roll</div>
   <div id="report"></div>
   <script src="./js/dice.js"></script>
 </body>
