--- a/08week/tic-tac-toe/index.html
+++ b/08week/tic-tac-toe/index.html
@@ -9,19 +9,19 @@
 
 <body>
   <div class="row">
-    <div data-cell="0" class='datacell'></div>
-    <div data-cell="1" class='datacell'></div>
-    <div data-cell="2" class='datacell'></div>
+    <div data-cell="0" class="datacell"></div>
+    <div data-cell="1" class="datacell"></div>
+    <div data-cell="2" class="datacell"></div>
   </div>
   <div class="row">
-    <div data-cell="3" class='datacell'></div>
-    <div data-cell="4" class='datacell'></div>
-    <div data-cell="5" class='datacell'></div>
+    <div data-cell="3" class="datacell"></div>
+    <div data-cell="4" class="datacell"></div>
+    <div data-cell="5" class="datacell"></div>
   </div>
   <div class="row">
-    <div data-cell="6" class='datacell'></div>
-    <div data-cell="7" class='datacell'></div>
-    <div data-cell="8" class='datacell'></div>
+    <div data-cell="6" class="datacell"></div>
+    <div data-cell="7" class="datacell"></div>
+    <div data-cell="8" class="datacell"></div>
   </div>
   <div id="announce-winner"></div>
   <button id="clear">Clear Board</button>
