--- a/07week/dom-practice/index.html
+++ b/07week/dom-practice/index.html
@@ -20,15 +20,15 @@
     <li>Amazon Echo</li>
     <li>Coleman Lay Z Spa Inflatable Hot Tub</li>
     <button id="button">Add</button>
-    <button id="button-N">Remove</button>
+    <button id="buttonn">Remove</button>
   </ul>
 
   <div id="div">
 
-    <p class="paragraph" id="P-1">All-New Fire 7 Tablet: The next generation of our best-selling Fire tablet ever - now
+    <p class="paragraph" id="p1">All-New Fire 7 Tablet: The next generation of our best-selling Fire tablet ever - now
       thinner, lighter, and with longer battery life and an improved display. More durable than the latest iPad.</p>
 
-    <p class="paragraph" id="P-2">Flash Furniture Yellow Metal Indoor-Outdoor Chair with Arms: Completely transform your
+    <p class="paragraph" id="p2">Flash Furniture Yellow Metal Indoor-Outdoor Chair with Arms: Completely transform your
       living or restaurant space with this vintage style chair. Adding colorful chairs can rev up any setting. The
       versatility of this chair easily conforms in different environments. Chairs are lightweight and easily stack for
       storing. A cross brace underneath the seat adds extra stability and features plastic caps that prevent the finish
@@ -38,11 +38,11 @@
       patio
       or bistro, it is sure to liven up your decor.</p>
 
-    <p class="paragraph" id="P-3">Amazon Echo: Amazon Echo is a hands-free speaker you control with your voice. Echo
+    <p class="paragraph" id="p3">Amazon Echo: Amazon Echo is a hands-free speaker you control with your voice. Echo
       connects to the Alexa Voice Service to play music, make calls, send and receive messages, provide information,
       news, sports scores, weather, and more—instantly. All you have to do is ask.</p>
 
-    <p class="paragraph" id="P-4">Coleman Lay Z Spa Inflatable Hot Tub: Pamper yourself in relaxing heated water
+    <p class="paragraph" id="p4">Coleman Lay Z Spa Inflatable Hot Tub: Pamper yourself in relaxing heated water
       surrounded by soothing bubble jets. Easy to operate digital control panel; automatic start/stop timer-controlled
       heating system. 4-6 Person Capacity. Inflated walls are made of TriTech material that provides ultimate
       durability
