--- a/08week/tic-tac-toe/index.html
+++ b/08week/tic-tac-toe/index.html
@@ -7,23 +7,28 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-  <div class="row">
-    <div class='col' data-i=0 data-j=0></div>
-    <div class='col' data-i=0 data-j=1></div>
-    <div class='col' data-i=0 data-j=2></div>
-  </div>
-  <div class="row">
-    <div class='col' data-i=1 data-j=0></div>
-    <div class='col' data-i=1 data-j=1></div>
-    <div class='col' data-i=1 data-j=2></div>
-  </div>
-  <div class="row">
-    <div class='col' data-i=2 data-j=0></div>
-    <div class='col' data-i=2 data-j=1></div>
-    <div class='col' data-i=2 data-j=2></div>
-  </div>
-  <div id="announce-winner"></div>
-  <button id="restart">Restart</button>
+  <div id="tictactoe">
+    <div class="gameboard">
+        <div class="row">
+            <div class="box" id="cell-1"></div>
+            <div class="box" id="cell-2"></div>
+            <div class="box" id="cell-3"></div>
+        </div>
+        <div class="row">
+            <div class="box" id="cell-4"></div>
+            <div class="box" id="cell-5"></div>
+            <div class="box" id="cell-6"></div>
+        </div>
+        <div class="row">
+            <div class="box" id="cell-7"></div>
+            <div class="box" id="cell-8"></div>
+            <div class="box" id="cell-9"></div>
+        </div>
+      </div>
+    <div class="scoreboard">
+        <button id="clear">Clear Board</button>
+    </div>
+</div>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="./script.js"></script>
 </body>
