--- a/08week/tic-tac-toe/index.html
+++ b/08week/tic-tac-toe/index.html
@@ -18,6 +18,7 @@
       <td></td><td></td><td></td>
     </tr>
   </table>
+  <input class="reset" type="button" value="Reset" />
 </div>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="./script.js"></script>
