added checkpoint 2 to root index file

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <a href="./02week/bio/index.html">Bio</a>
     <a href="./02week/blog/index.html">Blog</a>
     <a href="./03week/airplane/index.html">Airplane</a>
+    <a href="./Checkpoint2/portfolio.html">Checkpoint 2</a>
   </body>
 </html>
