--- a/Checkpoint2/portfolio.html
+++ b/Checkpoint2/portfolio.html
@@ -44,10 +44,10 @@
       <p>created by Chase Woods (2018)</p>
     </div>
     <div class="social box2">
-      <a href='#'><img src="/Images/if_facebook_social_connect_account_profile_1083203.png"></a>
-      <a href='#'><img src="/Images/if_instragram_social_connect_account_profile_1083201.png"></a>
-      <a href='#'><img src="/Images/if_twitter_social_connect_account_profile_1083198.png"></a>
-      <a href='#'><img src="/Images/if_linkedin_social_connect_account_profile_1083200.png"></a>
+      <a href='#'><img src="../Images/if_facebook_social_connect_account_profile_1083203.png"></a>
+      <a href='#'><img src="../Images/if_instragram_social_connect_account_profile_1083201.png"></a>
+      <a href='#'><img src="../Images/if_twitter_social_connect_account_profile_1083198.png"></a>
+      <a href='#'><img src="../Images/if_linkedin_social_connect_account_profile_1083200.png"></a>
     </div>
   </div>
   </div>
