--- a/09week/towers-of-hanoi/index.html
+++ b/09week/towers-of-hanoi/index.html
@@ -6,18 +6,23 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div data-stack="1">
-    <div data-block="100"></div>
-    <div data-block="75"></div>
-    <div data-block="50"></div>
-    <div data-block="25"></div>
-  </div>
-  <div data-stack="2">
-  </div>
-  <div data-stack="3">
-  </div>
-  <div id="announce-game-won"></div>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="script.js"></script>
+    <h1>Towers of Hanoi</h1>
+    
+    <h4>Moves: <span id="moveCount"></span></h4>
+        <div data-stack="1" ondrop="dropBlock(event)" ondragover="allowDrop(event)">
+        <div data-block="100" ondragstart="dragBlock(event)"></div>
+        <div data-block="75"  ondragstart="dragBlock(event)"></div>
+        <div data-block="50"  ondragstart="dragBlock(event)"></div>
+        <div data-block="25" draggable="true" ondragstart="dragBlock(event)"></div>
+      </div>
+      <div data-stack="2"ondrop="dropBlock(event)" ondragover="allowDrop(event)"></div>
+      <div data-stack="3" ondrop="dropBlock(event)" ondragover="allowDrop(event)"></div>
+      <div id="announce-game-won"></div>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
+    
+      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js"></script>
+      <script 
+      <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
