--- a/01week/helloworld/index.html
+++ b/01week/helloworld/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Our First Page</title>
+    <title>Bio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
     <script src="main.js"></script>
 </head>
 <body>
-    Hello World!
+    <header>
+        
+    </header>
 </body>
 </html>
