--- a/01week/helloworld/index.html
+++ b/01week/helloworld/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> Saluton, komencanto.</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+   <title>H E L L O W O R L D</title>
+   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    Saluton, vi
+    <audio controls>
+        <source src=../This PC/ Music/ "R0x4ry - The -r​-​Vaporwave Mixtape- Vol​.​2 - 14 Depression Agent.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+      </audio>
 </body>
 </html>
