--- a/08week/dom-events/index.html
+++ b/08week/dom-events/index.html
@@ -11,6 +11,7 @@
         <div class="box" id="counter-1">1</div>
         <div class="box" id="counter-10">10</div>
         <div class="box" id="counter-100">100</div>
+        <div class="box" id="new-box"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="./script.js"></script>
 </body>
