Added towers-of-hanoi game

--- a/09week/towers-of-hanoi/index.html
+++ b/09week/towers-of-hanoi/index.html
@@ -17,7 +17,11 @@
   <div data-stack="3">
   </div>
   <div id="announce-game-won"></div>
+  <div id="reset">Reset</div>
+  <div id="announce-winner"></div>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
