Changed Orientation of game to vertical

--- a/09week/towers-of-hanoi/index.html
+++ b/09week/towers-of-hanoi/index.html
@@ -6,15 +6,17 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div data-stack="1">
-    <div data-block="100"></div>
-    <div data-block="75"></div>
-    <div data-block="50"></div>
-    <div data-block="25"></div>
-  </div>
-  <div data-stack="2">
-  </div>
-  <div data-stack="3">
+  <div class="stack-container">
+      <div data-stack="1">
+          <div data-block="25"></div>
+          <div data-block="50"></div>
+          <div data-block="75"></div>
+          <div data-block="100"></div>
+        </div>
+        <div data-stack="2">
+        </div>
+        <div data-stack="3">
+        </div>
   </div>
   <div id="announce-game-won"></div>
   <div id="reset">Reset</div>
