--- a/08week/tic-tac-toe/index.html
+++ b/08week/tic-tac-toe/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tic Tac Toe</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <div class="row">
     <div data-cell="0"></div>
@@ -21,9 +23,10 @@
     <div data-cell="7"></div>
     <div data-cell="8"></div>
   </div>
-  <div id="announce-winner"></div>
+  <div id="announce-winner">Winner!!!</div>
   <button id="clear">Clear Board</button>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="./script.js"></script>
 </body>
+
 </html>
