--- a/09week/towers-of-hanoi/index.html
+++ b/09week/towers-of-hanoi/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Towers of Hanoi</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <div data-stack="1">
     <div data-block="100"></div>
@@ -18,6 +20,9 @@
   </div>
   <div id="announce-game-won"></div>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+    crossorigin="anonymous"></script>
   <script type="text/javascript" src="script.js"></script>
 </body>
+
 </html>
