--- a/09week/towers-of-hanoi/index.html
+++ b/09week/towers-of-hanoi/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <div data-stack="1">
+
     <div data-block="100"></div>
     <div data-block="75"></div>
     <div data-block="50"></div>
@@ -18,6 +19,8 @@
   </div>
   <div id="announce-game-won"></div>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
