copied button styling from calculator page

--- a/09week/customer-satisfaction/index.html
+++ b/09week/customer-satisfaction/index.html
@@ -62,7 +62,7 @@
         <label for="password">Password</label>
         <input type="password" name="password" id="password" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;">
     
-        <button type="submit">Register</button>
+        <button id="submit" type="submit">Register</button>
       </form>
     </div>
   </main>
