--- a/09week/customer-satisfaction/index.html
+++ b/09week/customer-satisfaction/index.html
@@ -51,16 +51,30 @@
       <form action="" name="registration">
 
         <label for="firstname">First Name</label>
-        <input type="text" name="firstname" id="firstname" placeholder="John">
+        <input class="text-box" type="text" name="firstname" id="firstname" placeholder="John">
 
         <label for="lastname">Last Name</label>
-        <input type="text" name="lastname" id="lastname" placeholder="Doe">
+        <input class="text-box" type="text" name="lastname" id="lastname" placeholder="Doe">
 
         <label for="email">Email</label>
-        <input type="email" name="email" id="email" placeholder="john@doe.com">
+        <input class="text-box" type="email" name="email" id="email" placeholder="john@doe.com">
 
+        <label for="url">Website</label>
+        <input class="text-box" type="url" name="website" id="website" placeholder="www.johndoe.com">
+        
         <label for="password">Password</label>
-        <input type="password" name="password" id="password" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;">
+        <input class="text-box" type="password" name="password" id="password" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;">
+        
+        <label for="check">Arbitrary Checkbox</label>
+        <input class="text-box" type="checkbox" name="checkbox" id="checkbox">
+
+        <label for="check">Arbitrary Radio Buttons</label>
+        <input type="radio" name="radio" id="radio">
+        <input type="radio" name="radio" id="radio">
+        <input type="radio" name="radio" id="radio">
+
+        <label for="check">Arbitrary Range</label>
+        <input type="range" name="range" id="range">
 
         <button id="submit" type="submit">Register</button>
       </form>
